# Anticipatory-Active-Inference-for-Visual-Servo-of-UAV

./: README.md  data.csv  test.sh  tracking_model_acados_ocp.json
APO/: CMakeLists.txt  package.xml
APO/src/: APO.cpp  APO.h
Anticipatory_Active_Inference_with_Data_Augmentation/: CMakeLists.txt  package.xml
Anticipatory_Active_Inference_with_Data_Augmentation/src/: aai_casadi.h  aai_qp.cpp
Cal_P_q/: CMakeLists.txt  package.xml
Cal_P_q/src/: Cal_P_q.cpp
Collect_xyz_Pub_acc/: CMakeLists.txt  package.xml
Collect_xyz_Pub_acc/src/: Collect_xyz_Pub_acc.cpp
Model_Predictive_Active_Inference/: CMakeLists.txt  package.xml
Model_Predictive_Active_Inference/src/: AAI_DA.cpp  AAI_DA.h  RAID_AgiVS_for_UAV.cpp  RAID_AgiVS_for_UAV.h  RAID_AgiVS_for_test.cpp  RAID_AgiVS_for_test.h  aai_casadi.cpp  aai_qpOASES.cpp  mpai_casadi.cpp  mpai_hpipm.cpp  mpai_hpipm.h  mpai_qp.cpp  mpai_qp.h  mpai_qpOASES.cpp  mpai_qpOASES.h  mpai_qp_ty.cpp  mpai_qp_ty.h  run_AAI_DA_UAV.cpp  run_RAID_AgiVS.cpp  run_RAID_AgiVS_UAV.cpp  test_agivs.cpp  test_agivs.h
RAID_AgiVS_for_car_tracking/: CMakeLists.txt  package.xml
RAID_AgiVS_for_car_tracking/src/: RAID-AgiVS.cpp
RSM2/: CMakeLists.txt  package.xml
RSM2/src/: Dual_Rate_Observer_with_delay.cpp  Dual_Rate_Observer_with_delay.h  Dual_Rate_Observer_with_delay_test.cpp  RSM2.cpp  RSM_using_APO.cpp  RSM_using_APO.h  RSM_using_DROD.cpp  RSM_using_DROD.h  RSM_with_delay.cpp  RSM_without_delay.cpp
Relative_Pos_Cal/: CMakeLists.txt  package.xml  readme.md
Relative_Pos_Cal/src/: 1.json  (+4 more)
Second_order_system/: CMakeLists.txt  package.xml
aic_apo_2rd_with_d/: CMakeLists.txt
cap_pic_from_cam_srv/: CMakeLists.txt  package.xml
cap_pic_from_cam_srv/src/: CameraCapture.cpp  CameraCapture.h  cap_pic_from_cam_srv.cpp
enter_offboard/: CMakeLists.txt  package.xml
esc_rmp_sub/: CMakeLists.txt  package.xml
fake_pose_publisher/: CMakeLists.txt  package.xml
picture_send_test/: CMakeLists.txt  package.xml
platform_hardware/: baseborad.SLDPRT  readme.md  thrust test platform.STEP  top plate.SLDPRT  tripod.SLDPRT  upboard for extra devices.SLDPRT
px4ctrl/: CMakeLists.txt
px4ctrl/config/: ctrl_param_fpv.yaml
px4ctrl/launch/: run_ctrl.launch
px4ctrl/px4ctrl/config/: ctrl_param_fpv.yaml
px4ctrl/px4ctrl/src/: PX4CtrlFSM.cpp  controller.cpp  controller.h  px4ctrl_node.cpp
px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  controller.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
q_sub/: CMakeLists.txt  package.xml
test_send_thrust/: CMakeLists.txt  package.xml
testpkg/: CMakeLists.txt  package.xml
visp_apriltah_detect/: CMakeLists.txt
(+19 files in other folders)
